# kxsb-lpb25-alternative-stories

./: LICENSE  README.md  docker-compose.yml  example_dialogue_gen.json
backend/: alembic.ini  example_gen.json  generate_session.py  main.py  pyproject.toml  requirements.txt  start_gen.json
backend/alembic/: env.py
backend/alembic/versions/: 08f8210958c5_init_database.py  42990011e70b_init_database.py  51496bcb58af_init_database.py  5d8ca04ed895_init_database.py  a89a0a1445a0_init_database.py  f6c0d2ad8058_init_database.py
backend/app/: config.py  database.py  luma.py
backend/app/gamemaster/: generate_game_story_act.py  generate_next_story_block.py  llms.py  suggest_game_session.py  utils.py
backend/app/models/: __init__.py
backend/tests/: example_gen.json  gen_resp.json
frontend/: .gitignore  codegen.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: ClientProviders.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/debug/: page.tsx
frontend/src/app/session/[key]/: layout.tsx  page.tsx
frontend/src/app/session/[key]/_components/: MagicCameraOverlay.tsx  PhotoTaskOverlay.tsx  ShowPrologueOverlay.tsx  ShowVideoOverlay.tsx
frontend/src/ui/buttons/: button.module.css  button.tsx
frontend/src/ui/overlays/: toast.tsx
frontend/src/ui/progress/: loader.module.css  loader.tsx
